--- a/Contact.html
+++ b/Contact.html
@@ -91,7 +91,7 @@
             </nav>
             <main>
                 <div class="content">
-                    <h1>About</h1>
+                    <h1>Contact</h1>
                     <ul id="portfolio" class="portfolio">
                     </ul>
                 </div>
@@ -99,5 +99,3 @@
         </div>
     </body>
 </html>
-
-
