--- a/Home.html
+++ b/Home.html
@@ -82,21 +82,11 @@
     <body>
         <div id="all-contents">
             <nav>
-                <header>Konner's Portfolio</header>
+                <header>BoiYouSleep</header>
                 <ul>
-                    <li><a href="index.html">Home</a>
+                    <li><a href="index.html">About</a>
                     </li>
                     <li><a href="portfolio.html">Portfolio</a>
                     </li>
-                </ul>
-            </nav>
-            <main>
-                <div class="content">
-                    <h1>Portfolio</h1>
-                    <ul id="portfolio" class="portfolio">
-                    </ul>
-                </div>
-            </main>
-        </div>
-    </body>
-</html>
+                    <li><a href="Contact.html">Contact</a>       
+  
