--- a/portfolio.html
+++ b/portfolio.html
@@ -85,11 +85,11 @@
                 <header>BoiYouSleep</header>
                 <ul>
                     <li><a href="Home.html">Home</a>
-                    <li><a href="index.html">Project 1</a>
+                    <li><a href="project1.html">Android App</a>
                     </li>
-                    <li><a href="portfolio.html">Project 2</a>
+                    <li><a href="project2.html">Project 2</a>
                     </li>
-                    <li><a href="Contact.html">Project 3</a>
+                    <li><a href="project3.html">Project 3</a>
       </li>
                 </ul>
             </nav>
