Added flow Chart

--- a/index.html
+++ b/index.html
@@ -101,3 +101,4 @@
 </html>
 
 
+<h1>My name is Konner Valen and im a sophmore my tech skills are hardware and alittle software Im mostly good at building/making/fixing hardware and im learning how to do software I know css Html and python and hoping to learn more until im a senior.</h1>
