--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                     <li><a href="Home.html">Home</a>
                     <li><a href="project1.html">Android App</a>
                     </li>
-                    <li><a href="project2.html">Project 2</a>
+                    <li><a href="project2.html">Flow Chart</a>
                     </li>
                     <li><a href="project3.html">Project 3</a>
       </li>
