--- a/Home.html
+++ b/Home.html
@@ -88,5 +88,6 @@
                     </li>
                     <li><a href="portfolio.html">Portfolio</a>
                     </li>
-                    <li><a href="Contact.html">Contact</a>       
-  
+                    <li><a href="Contact.html">Contact</a>
+                    
+                  <link rel="shortcut icon" type="image/x-icon" href="/images/1509037359.ico">
