--- a/project2.html
+++ b/project2.html
@@ -91,7 +91,7 @@
             </nav>
             <main>
                 <div class="content">
-                    <h1>Project 2</h1>
+                    <h1>Flow Chart</h1>
                     <ul id="portfolio" class="portfolio">
                     </ul>
                 </div>
@@ -99,3 +99,31 @@
         </div>
     </body>
 </html>
+ 
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+img {
+    display: block;
+    margin: auto;
+}
+</style>
+</head>
+<body>
+
+<img src="/images/Document 2.jpg" alt="Paris" style="width:50%">
+
+</body>
+</html>
+
+<iframe height="400px" width="100%" src="https://repl.it/@JimmyL/Interactive-Fiction-1341?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+
+
+
+
+<h1>We had alot of ideas but went with one that resembled some movies of zombies. We used creately to create the flow chart and repl.it to create the program. We had many problems with the programing like making new if statements took us awhile to get it right but after alittle time we got it right. we also had many many errors took us awhile to figure out were they were what was wrong with them and how to fix them.
+</h1>
+<h1>Story:</h1>
+<h1>In this story Joey caps, Taylor Bucket, and Rachel Mop are living in New York in the year 2017 in the middle of a zombie apocalypse. They are trying to revamp society, they try to create a wall to separate themselves from the zombies so they can be safe and have a life. They can't stay within the wall all day because they have to raid for food and medical supplies. While hunting for food Taylor gets caught in the horde and ends up dying. They abort the mission and go back to their wall and get inside. When they are inside zombies crawl on the the walls trying to raid them. The zombies start to add too much pressure onto the wall and ends up collapsing on Joeys arm. Joey ends up losing his arm and Rachel retreats inside of the building. While closing the door she get her hand caught into it and loses her pinky. Joey and Rachel end up staying in the building until the zombies leave or they get rescued.
+</h1>
