Added Python prject

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
                     </li>
                     <li><a href="project2.html">Flow Chart</a>
                     </li>
-                    <li><a href="project3.html">Project 3</a>
+                    <li><a href="project3.html">Python Project</a>
       </li>
                 </ul>
             </nav>
