--- a/project3.html
+++ b/project3.html
@@ -91,7 +91,7 @@
             </nav>
             <main>
                 <div class="content">
-                    <h1>Project 3</h1>
+                    <h1>Python Project</h1>
                     <ul id="portfolio" class="portfolio">
                     </ul>
                 </div>
